完成基础显示驱动和内存分页管理

--- a/src/makefile
+++ b/src/makefile
@@ -27,8 +27,22 @@ $(BUILD)/kernel/%.o: $(SRC)/kernel/%.c
 	$(shell mkdir -p $(dir $@))
 	gcc -o $@ $(CFLAGS) $(DEBUG) $(INCLUDE) -c $<
 
+$(BUILD)/lib/%.o: $(SRC)/lib/%.c
+	$(shell mkdir -p $(dir $@))
+	gcc -o $@ $(CFLAGS) $(DEBUG) $(INCLUDE) -c $<
+
 $(BUILD)/kernel.bin: $(BUILD)/kernel/start.o \
-    	$(BUILD)/kernel/main.o
+    	$(BUILD)/kernel/main.o \
+	$(BUILD)/kernel/io.o \
+	$(BUILD)/kernel/console.o \
+	$(BUILD)/kernel/printk.o \
+	$(BUILD)/kernel/assert.o \
+	$(BUILD)/kernel/debug.o \
+	$(BUILD)/kernel/global.o \
+	$(BUILD)/kernel/memory.o \
+	$(BUILD)/lib/stdlib.o \
+	$(BUILD)/lib/string.o \
+	$(BUILD)/lib/vsprintf.o \
 
 	$(shell mkdir -p $(dir $@))
 	ld -m elf_i386 -static $^ -o $@ -Ttext $(ENTRYPOINT)
