--- a/src/makefile
+++ b/src/makefile
@@ -39,6 +39,10 @@ $(BUILD)/kernel.bin: $(BUILD)/kernel/start.o \
 	$(BUILD)/kernel/assert.o \
 	$(BUILD)/kernel/debug.o \
 	$(BUILD)/kernel/global.o \
+	$(BUILD)/kernel/interrupt.o \
+	$(BUILD)/kernel/handler.o \
+	$(BUILD)/kernel/schedule.o \
+	$(BUILD)/kernel/task.o \
 	$(BUILD)/kernel/memory.o \
 	$(BUILD)/lib/stdlib.o \
 	$(BUILD)/lib/string.o \
