--- a/src/makefile
+++ b/src/makefile
@@ -3,76 +3,88 @@ SRC:=.
 
 ENTRYPOINT:=0x10000
 
-CFLAGS:= -m32
-CFLAGS+= -fno-builtin
-CFLAGS+= -nostdinc
-CFLAGS+= -fno-pic
-CFLAGS+= -fno-pie
-CFLAGS+= -nostdlib
-CFLAGS+= -fno-stack-protector
-CFLAGS:=$(strip $(CFLAGS))
+CFLAGS:= -m32 # 32 位的程序
+CFLAGS+= -fno-builtin	# 不需要 gcc 内置函数
+CFLAGS+= -nostdinc		# 不需要标准头文件
+CFLAGS+= -fno-pic		# 不需要位置无关的代码  position independent code
+CFLAGS+= -fno-pie		# 不需要位置无关的可执行程序 position independent executable
+CFLAGS+= -nostdlib		# 不需要标准库
+CFLAGS+= -fno-stack-protector	# 不需要栈保护
+CFLAGS:=$(strip ${CFLAGS})
 
 DEBUG:= -g
-INCLUDE:= -I$(SRC)/include
+INCLUDE:=-I$(SRC)/include
 
 $(BUILD)/boot/%.bin: $(SRC)/boot/%.asm
 	$(shell mkdir -p $(dir $@))
 	nasm -f bin $< -o $@
 
-$(BUILD)/kernel/%.o: $(SRC)/kernel/%.asm
+$(BUILD)/%.o: $(SRC)/%.asm
 	$(shell mkdir -p $(dir $@))
-	nasm -f elf32 $< -o $@
+	nasm -f elf32 $(DEBUG) $< -o $@
 
-$(BUILD)/kernel/%.o: $(SRC)/kernel/%.c
+$(BUILD)/%.o: $(SRC)/%.c
 	$(shell mkdir -p $(dir $@))
-	gcc -o $@ $(CFLAGS) $(DEBUG) $(INCLUDE) -c $<
+	# Compile source code into an object file without linking
+	gcc $(CFLAGS) $(DEBUG) $(INCLUDE) -c $< -o $@
 
-$(BUILD)/lib/%.o: $(SRC)/lib/%.c
-	$(shell mkdir -p $(dir $@))
-	gcc -o $@ $(CFLAGS) $(DEBUG) $(INCLUDE) -c $<
+LDFLAGS:= -m elf_i386 \
+		-static \
+		-Ttext $(ENTRYPOINT)
+LDFLAGS:=$(strip ${LDFLAGS})
 
-$(BUILD)/kernel.bin: $(BUILD)/kernel/start.o \
-    	$(BUILD)/kernel/main.o \
+$(BUILD)/kernel.bin: \
+	$(BUILD)/kernel/start.o \
+	$(BUILD)/kernel/main.o \
 	$(BUILD)/kernel/io.o \
+	$(BUILD)/kernel/device.o \
 	$(BUILD)/kernel/console.o \
 	$(BUILD)/kernel/printk.o \
 	$(BUILD)/kernel/assert.o \
 	$(BUILD)/kernel/debug.o \
 	$(BUILD)/kernel/global.o \
+	$(BUILD)/kernel/task.o \
+	$(BUILD)/kernel/thread.o \
+	$(BUILD)/kernel/mutex.o \
+	$(BUILD)/kernel/gate.o \
+	$(BUILD)/kernel/schedule.o \
 	$(BUILD)/kernel/interrupt.o \
 	$(BUILD)/kernel/handler.o \
-	$(BUILD)/kernel/schedule.o \
-	$(BUILD)/kernel/task.o \
+	$(BUILD)/kernel/clock.o \
+	$(BUILD)/kernel/time.o \
+	$(BUILD)/kernel/rtc.o \
+	$(BUILD)/kernel/ide.o \
 	$(BUILD)/kernel/memory.o \
-	$(BUILD)/lib/stdlib.o \
+	$(BUILD)/kernel/arena.o \
+	$(BUILD)/kernel/keyboard.o \
+	$(BUILD)/kernel/buffer.o \
+	$(BUILD)/fs/super.o \
+	$(BUILD)/fs/bmap.o \
+	$(BUILD)/fs/inode.o \
+	$(BUILD)/lib/bitmap.o \
+	$(BUILD)/lib/list.o \
+	$(BUILD)/lib/fifo.o \
 	$(BUILD)/lib/string.o \
 	$(BUILD)/lib/vsprintf.o \
+	$(BUILD)/lib/stdlib.o \
+	$(BUILD)/lib/syscall.o \
+	$(BUILD)/lib/printf.o \
 
 	$(shell mkdir -p $(dir $@))
-	ld -m elf_i386 -static $^ -o $@ -Ttext $(ENTRYPOINT)
-
+	ld ${LDFLAGS} $^ -o $@
+ 
 $(BUILD)/system.bin: $(BUILD)/kernel.bin
 	objcopy -O binary $< $@
 
 $(BUILD)/system.map: $(BUILD)/kernel.bin
 	nm $< | sort > $@
 
-$(BUILD)/master.img: $(BUILD)/boot/boot.bin \
-    $(BUILD)/boot/loader.bin \
-    $(BUILD)/system.bin \
-    $(BUILD)/system.map \
+include utils/image.mk
 
-	yes | bximage -q -hd=16 -mode=create -sectsize=512 -imgmode=flat $@
-	dd if=$(BUILD)/boot/boot.bin of=$@ bs=512 count=1 conv=notrunc
-	dd if=$(BUILD)/boot/loader.bin of=$@ bs=512 count=4 seek=2 conv=notrunc
-	dd if=$(BUILD)/system.bin of=$@ bs=512 count=200 seek=10 conv=notrunc
-
-test:	$(BUILD)/master.img
+.PHONY: bochs
+bochs: $(IMAGES)
+	bochs -q -f ./bochsrc -unlock
 
 .PHONY: clean
 clean:
 	rm -rf $(BUILD)
-
-.PHONY: bochs
-bochs: $(BUILD)/master.img
-	bochs -q
